--- a/GameLogs/GameLogs.csproj
+++ b/GameLogs/GameLogs.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="NuGet.Frameworks" Version="6.8.0" />
     <PackageReference Include="runtime.native.System.Data.SqlClient.sni" Version="4.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
 </Project>
